Replace DCHECK by DEBUG warning in NetworkMetricsProvider.

This code is quite old, affects only ChromeOS,
we really do not know who is the actual owner of this code,
or how these metrics are being used.

Change-Id: Iac7f8c24f37aa10e2f5053e0e2c734fa6220f745
Bug: 801884
Reviewed-on: https://chromium-review.googlesource.com/1034455
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554891}
Former-commit-id: 2b9159c056962a7b7050e1c2b0d8c2a0604ea269